syntax = "proto3";
package comdex.asset.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/asset/v1beta1/asset.proto";
import "comdex/asset/v1beta1/oracle.proto";
import "comdex/asset/v1beta1/pair.proto";
import "comdex/asset/v1beta1/params.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message QueryAssetsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAssetsResponse {
  repeated Asset assets = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assets\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAssetRequest {
  uint64 id = 1
      [ (gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryAssetResponse {
  Asset asset = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset\"" ];
}

message QueryMarketsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryMarketsResponse {
  repeated Market markets = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"markets\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryMarketRequest {
  string symbol = 1 [ (gogoproto.moretags) = "yaml:\"symbol\"" ];
}

message QueryMarketResponse {
  Market market = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"market\""
  ];
}

message QueryPairsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryPairsResponse {
  repeated Pair pairs = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pairs\"" ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryPairRequest {
  uint64 id = 1
      [ (gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryPairResponse {
  Pair pair = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pair\"" ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

service QueryService {
  rpc QueryAssets(QueryAssetsRequest) returns (QueryAssetsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/assets";
  }
  rpc QueryAsset(QueryAssetRequest) returns (QueryAssetResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/assets/{id}";
  }
  rpc QueryMarkets(QueryMarketsRequest) returns (QueryMarketsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/markets";
  }
  rpc QueryMarket(QueryMarketRequest) returns (QueryMarketResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/markets/{symbol}";
  }
  rpc QueryPairs(QueryPairsRequest) returns (QueryPairsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairs";
  }
  rpc QueryPair(QueryPairRequest) returns (QueryPairResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairs/{id}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/params";
  }
}
